Add tests for camera description

--- a/autobots_realsense2_description/CMakeLists.txt
+++ b/autobots_realsense2_description/CMakeLists.txt
@@ -5,3 +5,12 @@ find_package(catkin REQUIRED COMPONENTS)
 catkin_package(CATKIN_DEPENDS)
 
 install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+
+if(CATKIN_ENABLE_TESTING)
+    find_package(rostest REQUIRED)
+    # for each test in the test directory add it as a test
+    file(GLOB TEST_LAUNCH_FILES tests/*.test)
+    foreach(TEST_LAUNCH_FILE ${TEST_LAUNCH_FILES})
+        add_rostest(${TEST_LAUNCH_FILE})
+    endforeach()
+endif()
