--- a/autobots_calibration/package.xml
+++ b/autobots_calibration/package.xml
@@ -8,8 +8,11 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>roslaunch</build_depend>
+  <build_depend>gazebo_ros</build_depend>
 
   <exec_depend>roslaunch</exec_depend>
+  <exec_depend>gazebo_ros</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>python3-numpy</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
