Add script to spawn random objects from the warehouse

--- a/autobots_handy_simulation/CMakeLists.txt
+++ b/autobots_handy_simulation/CMakeLists.txt
@@ -6,6 +6,12 @@ catkin_package(CATKIN_DEPENDS)
 
 install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 
+file(GLOB SCRIPT_FILES script/*)
+install(
+  PROGRAMS ${SCRIPT_FILES}
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
 if(CATKIN_ENABLE_TESTING)
     find_package(rostest REQUIRED)
     file(GLOB TEST_LAUNCH_FILES tests/*.test)
