--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,14 @@
 #    pip-compile
 #
 camera @ git+https://github.com/ivapylibs/camera.git@2.2.0
-    # via -r requirements.in
+    # via -r ros/autobots_calibration/requirements.in
 contourpy==1.0.7
     # via matplotlib
 cycler==0.11.0
     # via matplotlib
-fonttools==4.39.2
+fonttools==4.39.3
     # via matplotlib
-imageio==2.26.1
+imageio==2.27.0
     # via scikit-image
 importlib-resources==5.12.0
     # via matplotlib
@@ -28,7 +28,7 @@ matplotlib==3.7.1
     # via
     #   camera
     #   improcessor
-networkx==3.0
+networkx==3.1
     # via scikit-image
 numpy==1.24.2
     # via
@@ -51,7 +51,7 @@ packaging==23.0
     # via
     #   matplotlib
     #   scikit-image
-pillow==9.4.0
+pillow==9.5.0
     # via
     #   imageio
     #   matplotlib
