--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor/GraspKpNet"]
 	path = vendor/GraspKpNet
-	url = git@github.com:ivalab/GraspKpNet.git
+	url = https://github.com/ivalab/GraspKpNet.git
