--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,14 +33,20 @@ services:
               count: 1
               capabilities: [gpu]
   core:
-    image: ros:noetic-ros-core-focal
     command: stdbuf -o L roscore
-    network_mode: host
+    <<: &core
+      image: ros:noetic-ros-core-focal
+      network_mode: host
+  set-sim-time:
+    <<: *core
+    restart: on-failure
+    command: stdbuf -o L rosparam set use_sim_time true
   gazebo:
     <<: *base-gpu
     command: roslaunch --wait autobots_handy_simulation gazebo.launch rviz:=false
-    depends_on:
-      - core
+    depends_on: &depends-on-sim # set-sim-time completes successfully
+      set-sim-time:
+        condition: service_completed_successfully
   moveit-rviz:
     # NOTE: WSL2 is not playing nicely rendering meshes in rviz, so we run this
     # with software rendering. This runs incredibly slow inside of docker, so
@@ -66,11 +72,11 @@ services:
       environment:
         DISPLAY: $DISPLAY
         QT_X11_NO_MITSHM: 1
-      depends_on:
-        - core
+      depends_on: *depends-on-sim
   filter-gui:
     <<: *gknet-base
     command: rosrun gknet_perception filter_gui.py
   stream-annotated-image:
     <<: *base
-    command: rosrun gknet_perception stream_camera.py --image-topic /gknet/annotated_image
+    command: rosrun autobots_calibration stream_camera.py --image-topic /gknet/annotated_image
+    depends_on: *depends-on-sim
