Add work in progress to get object to pixel locations

--- a/ros/autobots_handy_simulation/package.xml
+++ b/ros/autobots_handy_simulation/package.xml
@@ -15,6 +15,7 @@
   <exec_depend>gazebo_ros</exec_depend>
   <exec_depend>finalarm_description</exec_depend>
   <exec_depend>realsense2_description</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
 
   <test_depend>ros_pytest</test_depend>
 
