Add script for moving arm to positions with moveit_commander

--- a/ros/autobots_handy_simulation/package.xml
+++ b/ros/autobots_handy_simulation/package.xml
@@ -16,6 +16,8 @@
   <exec_depend>finalarm_description</exec_depend>
   <exec_depend>realsense2_description</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
+  <exec_depend>tf</exec_depend>
+  <exec_depend>moveit_commander</exec_depend>
 
   <test_depend>ros_pytest</test_depend>
 
